dj-game-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dj-game-demo-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
