ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dj-ingress
  namespace: dj
spec:
  rules:
    - host: "djapp-rohit.info"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
